<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">


    <ImageView
        android:id="@+id/imageViewProduct"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:contentDescription="@string/todo"
        android:scaleType="fitCenter"
        android:src="@drawable/blender_philips_hr2221" />

    <TextView
        android:id="@+id/tvDetailNama"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/example_nama_barang"
        android:textColor="?attr/colorPrimary"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/tvDetailDeskripsi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/example_deskripsi"
        android:textSize="16sp"
        android:layout_marginTop="8dp"/>

    <TextView
        android:id="@+id/tvDetailCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/example_kategori"
        android:textSize="16sp"
        android:layout_marginTop="8dp"/>

    <TextView
        android:id="@+id/tvDetailHarga"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/example_harga"
        android:textSize="16sp"
        android:layout_marginTop="8dp"/>

    <TextView
        android:id="@+id/tvDetailStock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/example_stock"
        android:layout_marginTop="8dp"/>

</LinearLayout>